--- a/README.html
+++ b/README.html
@@ -1,3 +1,3 @@
 # HTML-CSS
 Curso de HTML5-CSS3 do Curso em Vídeo
-<a href="https://www.google.com">site android</a>
+<a href="https://www.google.com">site</a>
