--- a/MOD-3/desafios/d012/nicolas/index.html
+++ b/MOD-3/desafios/d012/nicolas/index.html
@@ -36,17 +36,19 @@
         h2{
             color: white;
         }
-        div{
-            width: 100vh;
+        .projeto{
+            max-width: 800px;
             max-height: 140px;
             box-shadow: 2px 2px  2px rgba(0, 0, 0, 0.564);
             border: 2px solid black;
+            margin: auto;
         }
         .cor{
             background-color: white;
         }
         p{
             margin: 0px 0px 0px 30px;
+            
         }
         .container{
             margin: auto;
@@ -63,6 +65,9 @@
             margin: 20px 0px 0px ;
             text-align: center;
         }
+        .center{
+            margin: auto;
+        }
 
     </style>
 </head>
@@ -71,8 +76,8 @@
         <h1>Cordel Moderno</h1>
         <h2>Por Milton Duarte</h2>
     </header>
-    <div class="container">
-        <div class="cor">
+    <div class="center">
+        <div class="cor projeto">
             <p>Arroba agora não pesa</p>
             <p>É parte de um endereço</p>
             <p>Ponto final nem se usa</p>
@@ -81,8 +86,8 @@
             <p>Se o saite é muito bom</p>
             <p>Ele vale um alto preço.</p>
         </div>
-        <div class="fixed"></div>
-        <div class="cor">
+        <div class="fixed projeto"></div>
+        <div class="cor projeto">
             <p>Não é mais como era antes</p>
             <p>É tudo abreviado</p>
             <p>"Você" só tem duas letras</p>
@@ -91,8 +96,8 @@
             <p>Basta botar uma flor</p>
             <p>E um coração desenhado.</p>
         </div>
-        <div class="fixed">
-            <div class="transparente">
+        <div class="fixed projeto">
+            <div class="transparente projeto">
                 <p>Arroba agora não pesa</p>
                 <p>É parte de um endereço</p>
                 <p>Ponto final nem se usa</p>
@@ -102,7 +107,7 @@
                 <p>Ele vale um alto preço.</p>
             </div>
         </div>
-        <div class="cor">
+        <div class="cor projeto">
             <p>Arroba agora não pesa</p>
             <p>É parte de um endereço</p>
             <p>Ponto final nem se usa</p>
@@ -111,8 +116,8 @@
             <p>Se o saite é muito bom</p>
             <p>Ele vale um alto preço.</p>
         </div>
-        <div class="fix"></div>
-        <div class="cor">
+        <div class="fix projeto"></div>
+        <div class="cor projeto">
             <p>Arroba agora não pesa</p>
             <p>É parte de um endereço</p>
             <p>Ponto final nem se usa</p>
