--- a/MOD-4/exercicios/iframe003.html
+++ b/MOD-4/exercicios/iframe003.html
@@ -15,6 +15,6 @@
     </ul>
 
     <iframe src="paginas/pag004.html" name="frame" height="300" width="500"></iframe>
-<!--use o srcdoc se quiser trabalhar com -->
+<!--use o srcdoc se quiser trabalhar com html-->
 </body>
 </html>
